Fix dark mode payment details

--- a/public/style.css
+++ b/public/style.css
@@ -222,6 +222,15 @@ textarea {
 	.card_content {
 		color: white;
 	}
+
+	.payment-students li {
+		background-color: #322F35;
+		border: 1px solid #4A4458;
+	}
+
+	.payment-students a {
+		color: white;
+	}
 }
 
 /* Fonts */
